# jfmt

./: CMakeLists.txt
include/jfmt/: cformatted.h  sformatted.h  sstream.h
source/: cformatted.c  internal_formatted.c  internal_formatted.h  sformatted.c  sstream.c
source/include/jfmt/: cformatted.h  jfmt.h  jfmt_common.h  sformatted.h  sstream.h
source/tests/: fmt_test.c
